<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/frame_170"
        android:layout_width="wrap_content"
        android:layout_height="193dp"
        android:clipToOutline="true"
        android:orientation="vertical"
        android:background="@drawable/stat_background"
        >
        <ImageView
            android:id="@+id/image"
            android:layout_width="132dp"
            android:layout_height="94dp"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:src="@drawable/cluster"
            />

        <TextView
            android:id="@+id/km_hr"
            android:layout_width="99dp"
            android:layout_height="17dp"
            android:layout_marginStart="15dp"
            android:layout_below="@id/image"
            android:text="@string/km_hr"
            android:textAppearance="@style/km_hr"
            android:gravity="top"
            />
        <TextView
            android:id="@+id/subtitle"
            android:layout_width="99dp"
            android:layout_height="16dp"
            android:layout_below="@id/km_hr"
            android:layout_marginStart="15dp"
            android:text="@string/subtitle"
            android:textAppearance="@style/subtitle"
            android:lineSpacingExtra="1sp"
            android:translationY="-0.74sp"
            android:gravity="top"
            />
        <TextView
            android:id="@+id/description"
            android:layout_width="73dp"
            android:layout_height="22dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
          android:layout_alignParentBottom="true"
            android:text="@string/distance"
            android:textAppearance="@style/description"
            android:lineSpacingExtra="1sp"
            android:translationY="-0.74sp"
            android:gravity="top"
            />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>